fix scroll bar not showing

--- a/app/assets/stylesheets/variable.css.scss
+++ b/app/assets/stylesheets/variable.css.scss
@@ -11,6 +11,6 @@ body {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
-  
+  overflow:auto;  
  
 }
